# flaneur2020.github.io

./: .gitignore  C.html  CNAME  FAQ.html  FP.html  Gemfile  OS.html  README.md  Rakefile  _config.yml  about.md  archieve.html  archive.html  atom.xml  chinese-history.html  chinese-phrase.html  export-dounote.py  export-notion.py  hear-the-wind-sing.html  hugo.toml  imagination.html  index.html  japanese.html  kernel.html  lambda.html  links.md  math.html  misc.html  notes.md  notion_exporter.py  paper.md  programming.html  quote.html  quotes.html  requirements.txt  slow-boat-to-china.html  sync-notion.py  the-great-gatsby.html  tools.html  translation-multi-tasking.html  (+2 more)
.zed/: settings.json
_drafts/: 2024-06-30-vae-maths.md
_layouts/: default.html  page.html  paper.html  post.html
_notes/: Fixed-Invest-Hs300-Index.ipynb  Matplotlib-Note.ipynb
_posts/: 2008-11-20-%e5%85%b4%e5%a5%8b.md  2008-11-21-18.md  2008-11-30-learn-you-a-haskell-for-great-good.html  2008-12-04-lrc-yesterday-the-beatles.html  2008-12-06-%e5%9c%a8cygwin%e4%b8%8b%e7%bc%96%e8%af%91%e4%ba%86ruby%e5%92%8cracc.html  2008-12-09-%e4%bd%bf%e7%94%a8racc%e7%bc%96%e5%86%99%e7%ae%80%e5%8d%95%e8%ae%a1%e7%ae%97%e5%99%a8.md  2008-12-13-haskell%e8%b6%a3%e5%ad%a6%e6%8c%87%e5%8d%97.md  2009-01-03-%e5%90%ac%e5%ad%a6%e9%95%bf%e4%b8%80%e5%b8%ad%e8%af%9d.md  2009-02-09-%e5%8f%af%e7%88%b1%e7%9a%84%e6%9c%ac%e6%9c%ac.md  2009-02-13-ubuntu%e4%b8%8b%e7%ae%80%e5%8d%95%e9%85%8d%e7%bd%aelighttpd%e5%92%8cphp.md  2009-02-16-%e5%9c%a8miniplayer%e4%b8%8a%e6%98%be%e7%a4%ba%e4%b8%93%e8%be%91%e5%b0%81%e9%9d%a2.md  2009-02-26-lambda%e9%9a%8f%e7%ac%94.md  2009-03-19-haskell%e7%9a%84%e6%8e%92%e5%88%97%e7%bb%84%e5%90%88.md  2009-03-31-%e6%94%b6%e5%88%b0%e4%ba%86%e9%b8%a2%e5%bc%9f%e7%9a%84%e4%bf%a1-_.md  2009-04-12-%e6%9f%90%e5%87%ba%e7%89%88%e7%a4%be%e4%b8%93%e9%97%a8%e6%8b%bf%e5%8a%a8%e7%89%a9%e5%81%9a%e5%b0%81%e9%9d%a2.md  2009-04-19-do-notation%e6%98%af%e6%9c%89%e5%ae%b3%e7%9a%84.md  2009-04-26-%e8%af%95%e7%8e%a9%e4%ba%86%e4%b8%8bparsec.html  2009-05-09-%e5%85%b3%e4%ba%8e%e5%89%af%e4%bd%9c%e7%94%a8.md  2009-06-04-%ef%bc%9f.html  2009-06-13-haskell%ef%bc%9a%e5%8f%af%e5%8f%98%e7%8a%b6%e6%80%81%e7%9a%84%e5%91%bd%e4%bb%a4%e5%bc%8f%e8%af%ad%e8%a8%80.html  2009-06-14-fineday.html  2009-06-14-fineday.md  2009-06-25-%e4%bd%a0%e9%80%89%e6%8b%a9%e7%ab%99%e5%9c%a8%e6%97%b6%e9%97%b4%e7%9a%84%e5%af%b9%e7%ab%8b%e9%9d%a2.html  2009-07-02-vim-quick-reference-card.md  2009-07-12-%e6%9c%ac%e6%9d%b0%e6%98%8e%e5%b7%b4%e9%a1%bf%e5%a5%87%e4%ba%8b-1-3.html  2009-07-15-break-the-wall.md  2009-07-20-%e7%8e%8b%e7%8c%ab%e7%8c%ab%e8%b0%88monad.html  2009-07-24-%e5%b9%b6%e8%a1%8c%e7%9a%84quicksort.md  2009-11-03-645538.html  (+162 more)
exercises/cpp/hello-rust/: .gitignore  CMakeLists.txt  build.sh  main.cpp
exercises/cpp/hello-rust/rustlib/: Cargo.toml  build.rs
exercises/cpp/hello-rust/rustlib/src/: lib.rs
exercises/cpp/hello-spdlog/: CMakeLists.txt  README.md  build.sh  vcpkg.json
exercises/cpp/hello-spdlog/src/: main.cpp
exercises/cpp/trycmake/: CMakeLists.txt  vcpkg.json
exercises/cpp/trycmake/src/: main.cpp
exercises/portfolio-backtest/: .gitignore  README.md  backtest_daily_values.csv  backtest_monthly_metrics.csv  backtest_rebalance_history.csv  backtest_yearly_metrics.csv  download_data.py  pyproject.toml  run.sh  test_backtest.py
exercises/portfolio-backtest/config/: portfolios.yaml  settings.py
exercises/portfolio-backtest/core/: backtest.py  metrics.py  portfolio.py  rebalance.py
exercises/portfolio-backtest/data/: database.py  downloader.py  storage.py
exercises/portfolio-backtest/visualization/: streamlit_app.py
exercises/rust/bench-gemv-strided/: Cargo.toml
exercises/rust/bench-gemv-strided/src/: lib.rs  sgemv_strided.rs
familytools/webvideoget/: README.md  pyproject.toml  wcostream_get.py
familytools/webvideoget/scripts/: batch_download.py  rename_files.py
(+1210 files in other folders)
