[project]
name = "portfolio-backtest"
version = "0.1.0"
description = "Harry Browne Permanent Portfolio Backtesting System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Portfolio Backtest", email = "none@example.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "duckdb>=0.9.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "data", "config", "visualization"]

[tool.setuptools_scm]
write_to = "core/_version.py"
